@@ -12,6 +12,8 @@ Bugs fixed
   not start with a dash or slash, and referencing them will work correctly.
 * #1358: Fix handling of image paths outside of the source directory when using
   the "wildcard" style reference.
+* #1374: Fix for autosummary generating overly-long summaries if first line
+  doesn't end with a period.
 
 Documentation
 -------------
